# FastFactOrie5270

fast_fact/: .gitignore  README.md  __init__.py  config.py  pyproject.toml  requirements.txt
fast_fact/data/: __init__.py  datasets.py  prices.py  splits.py
fast_fact/fast_fact/: cli.py  pipeline.py
fast_fact/fast_fact/data/: sec.py
fast_fact/fast_fact/models/: __init__.py  base.py
fast_fact/models/: evaluate.py  train.py
fast_fact/tests/: test_cli.py  test_config.py  test_datasets.py  test_pipeline.py  test_prices.py  test_readme_examples.py  test_sec.py
tests/: conftest.py  test_models_base.py  test_models_evaluate.py  test_models_train.py  test_splits.py
