[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast_fact"
version = "0.1.0"
description = "8-K event-driven stock direction prediction (LoRA SFT, RAG, DPO)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ORIE 5270 Final Project" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.1",
    "tqdm>=4.64",
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "lxml>=4.9",
    "pyarrow>=11",
    "torch>=2.0",
    "transformers>=4.35",
    "peft>=0.6",
    "accelerate>=0.24",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2",
    "pytest-cov>=4.1",
]

[project.scripts]
fast-fact = "fast_fact.cli:main"

[tool.setuptools.packages.find]
include = ["fast_fact*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.coverage.run]
branch = true
source = ["fast_fact"]
omit = [
    "fast_fact/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
